customGson education 1.0 [*] List to json